<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/pinkPatrik"
    tools:context=".Screens.RiddlesScreen">

    <TextView
        android:id="@+id/quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/aldrich"
        android:text="@string/question_text"
        android:textAlignment="center"
        android:textColor="#2B1414"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/text_riddle_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text_riddle_screen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:fontFamily="@font/aldrich"
        android:gravity="center"
        android:hint="@string/riddle_text"
        android:inputType="text"
        android:minWidth="250dp"
        android:minHeight="48dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/quiz_text" />

    <TextView
        android:id="@+id/text_comp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="   "
        android:fontFamily="@font/aldrich"
        app:layout_constraintTop_toBottomOf="@id/text_riddle_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/answer_button"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_riddle_screen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/answer_button_text"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
